# aws_trascribe_meeting

./: .gitignore  README.md  README_HF_SPACES.md  app.py  deploy.sh  parse_transcribe_output.py  pyproject.toml  requirements.txt  start.py  trust-policy.json
